Chore: Update swagger docs
